# pytest_api_framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
TestData/: endpoints.py
TestData/schemas/: login.py  roompayload.py
TestData/test_data/: room_data.py
config/: qa.ini
test_data/: endpoints.py  expected_responses.py
test_data/schemas/: booking_response.py  login_response.py  room_response.py
test_data/test_data/: booking_data.py  room_data.py
tests/: conftest.py  rooms.py  test_booking.py  test_create_room.py  test_get_all_rooms.py  test_login.py  test_rooms.py
tests/rooms/: test_create_room.py
utils/: apiUtil.py  api_util.py  assertions.py  myconfigparser.py  schema_validator.py
utils/api_factory/: api_util.py  auth_api.py  booking_api.py  room_api.py
