[project]
name = "pytest-api-framework"
version = "0.1.0"
description = "API Test Framework with Pytest"
authors = [
    {name = "nora-weisser"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest (==2.15.0)",
    "allure-python-commons (==2.15.0)",
    "annotated-types (==0.7.0)",
    "attrs (==25.3.0)",
    "certifi (==2025.8.3)",
    "charset-normalizer (==3.4.3)",
    "faker (==37.5.3)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "packaging (==25.0)",
    "pluggy (==1.6.0)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pytest (==8.4.1)",
    "pytest-html (==4.1.1)",
    "pytest-metadata (==3.1.1)",
    "requests (==2.32.4)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.10.6"
tox = "^4.29.0"

